<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent">

    <hs.thang.com.love.util.TextViewC
        style="@style/list_item_text_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/listview_item_heigh"
        android:gravity="center_vertical"
        android:text="@string/share_for_friend"/>
    <View
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/diver_setting"
        android:background="@color/diver_setting" />

    <hs.thang.com.love.util.TextViewC
        style="@style/list_item_text_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/listview_item_heigh"
        android:gravity="center_vertical"
        android:text="@string/rare_for_app"/>
    <View
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/diver_setting"
        android:background="@color/diver_setting" />

    <hs.thang.com.love.util.TextViewC
        style="@style/list_item_text_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/listview_item_heigh"
        android:gravity="center_vertical"
        android:text="@string/go_to_app"/>

    <View
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/diver_setting"
        android:background="@color/diver_setting" />
</LinearLayout>