<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/change_wallpaper_bg"
        style="@style/item_setting">

        <hs.thang.com.love.util.TextViewC
            style="@style/list_item_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/change_wallpaper"/>

    </RelativeLayout>
    <View
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/diver_setting"
        android:background="@color/diver_setting" />
    <RelativeLayout
        android:id="@+id/change_font"
        style="@style/item_setting">

        <hs.thang.com.love.util.TextViewC
            style="@style/list_item_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/change_the_font"/>

    </RelativeLayout>
    <View
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/diver_setting"
        android:background="@color/diver_setting" />
    <RelativeLayout
        android:id="@+id/theme_color_bg"
        style="@style/item_setting">

        <hs.thang.com.love.util.TextViewC
            style="@style/list_item_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/theme_color"/>

        <Button
            android:id="@+id/theme_color"
            style="@style/color_view"/>

    </RelativeLayout>
    <View
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/diver_setting"
        android:background="@color/diver_setting" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/listview_item_heigh">

        <hs.thang.com.love.util.TextViewC
            style="@style/list_item_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/text_color"/>

    </RelativeLayout>

    <include
        layout="@layout/text_color_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>