<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_height="@dimen/listview_item_heigh">

        <TextView
            style="@style/list_item_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/color_upper_text"/>

        <TextView
            android:id="@+id/color_upper_text"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/white"
            android:layout_alignParentRight="true"
            android:gravity="end|center_vertical"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_height="@dimen/listview_item_heigh">

        <TextView
            style="@style/list_item_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/color_lower_text"/>

        <TextView
            android:id="@+id/list_item_text_view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/white"
            android:layout_alignParentRight="true"
            android:gravity="end|center_vertical"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_height="@dimen/listview_item_heigh">

        <TextView
            style="@style/list_item_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/color_day_number"/>

        <TextView
            android:id="@+id/color_day_number"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/white"
            android:layout_alignParentRight="true"
            android:gravity="end|center_vertical"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_height="@dimen/listview_item_heigh">

        <TextView
            style="@style/list_item_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/color_nickname1"/>
        <View
            android:id="@+id/color_nickname1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/white"
            android:layout_alignParentRight="true"
            android:gravity="end|center_vertical"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="32dp"
        android:layout_height="@dimen/listview_item_heigh">

        <TextView
            style="@style/list_item_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/color_nickname2"/>

        <View
            android:id="@+id/color_nickname2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/white"
            android:layout_alignParentRight="true"
            android:gravity="end|center_vertical"/>
    </RelativeLayout>

</LinearLayout>