<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/backgound_frag_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent_40"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textview_label"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/listview_item_heigh"
                android:gravity="center_vertical"
                android:text="@string/setting" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:background="@color/diver_setting" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/listview_item_heigh">

                <TextView
                    style="@style/list_item_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/notification" />

                <Switch
                    android:id="@+id/checkbox_screen_time_out"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:checked="false"
                    android:gravity="end|center_vertical" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/listview_item_heigh">

                <TextView
                    style="@style/list_item_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/lock_screen" />

                <Switch
                    android:id="@+id/checkbox_flash"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:checked="false"
                    android:gravity="end|center_vertical" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/listview_item_heigh"
                android:orientation="vertical">

                <TextView
                    style="@style/list_item_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/security" />
            </RelativeLayout>

            <include
                layout="@layout/security_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/listview_item_heigh">

                <TextView
                    style="@style/list_item_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/interface_setting" />
            </RelativeLayout>

            <include
                layout="@layout/interface_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <include
                layout="@layout/text_color_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            style="@style/textview_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/more" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@color/diver_setting" />

        <include
            layout="@layout/more_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>